--- a/public/index_past.html
+++ b/public/index_past.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Past Edition 2023</title>
+    <title style="font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">Past Edition 2023</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
